# recursive-agency

./: AGENTS.md  Anti-Imitation Recursive License (AIR License)  CODEOWNERS  CODE_OF_CONDUCT.md  Contributing.md  LICENSE_AIR.md  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.githooks/: commit-msg
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
01_FOUNDATIONS/: falsifiability.md  foundational_laws.md
02_DESIGN_PRINCIPLES/: no_god_words.md  ontology_entropy_map.md
03_CORE_ARCHITECTURE/: agency_engine.py  contradiction_trace_protocol.md  distributed_agency.md  example_usage.py  r2d2_core.md  r2d2_core.py  recursive_contradiction_agent.py  seit.md
04_EVALUATION_PROTOCOLS/: ontology_entropy_map.py  test_agency_engine.py  test_ontology_entropy_map.py
04_METHODS/: memory_capsule_protocol.md
05_CRYPTO_ANALYSIS_DEMO/: README.md  r2d2_crypto_demo.py
05_EVALUATION/: falsification_matrix.md
08_ENTROPY/: ontology_entropy_map.md
09_RECURSIVE_AUDIT/: r2d2_audit_update_protocol.md
ISSUE_TEMPLATE/: bug.yaml  contradiction.yaml
core/: agency_engine.py  memory_pool.py
docs/: 01_recursion_manifesto.md  02_recursive_laws.md  Manifesto.md.  Provenance.md  usage.md
examples/: basic_r2d2_usage.py  recursive_response_01.py
specs/: recursive_agency.md
tests/: test_agency_engine.py  test_gcs_utils.py  test_memory_pool.py  test_r2d2_solver.py  test_recursive_contradiction_agent.py  test_self_reflection.py  test_smoke.py  test_solver.py  test_spec_doctests.md
(+6 files in other folders)
